--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,116 @@
-.App {
-  text-align: center;
+/* webkit fixes*/
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+input[type=number] {
+    -moz-appearance:textfield;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Cambios al Bootstrap */
+.list-group-item:first-child {
+    border-top-left-radius: .7rem !important;
+    border-top-right-radius: .7rem !important;
+    transition: border-radius 1s;
+}
+.list-group-item:last-child {
+    border-bottom-left-radius: .7rem !important;
+    border-bottom-right-radius: .7rem !important;
+    transition: border-radius 1s;
+}
+.list-group-item{
+    background-color: #192a56 !important;
+    border: none;
+    font-size: 1.3em;
+    margin-top: 5px !important;
+    transition: border-radius 1s;
+}
+input{
+    background-color: transparent;
+    color: white;
+    border: none;
+    width: 100%;
+}
+input::placeholder{
+    color: rgba(255, 255, 255, 0.5);
+}
+select{
+    background-color: transparent;
+    border: none;
+    color: white;
+    width: 100%;
+    font-size: 0.7em;
+    height: 33px;
+}
+option{
+    color: black;
+}
+.btn{
+    width: 100%;
+    border-radius: .7rem !important;
+    font-size: 1.3em;
+    box-shadow: 0 2px 40px 0 rgba(0, 0, 0, 0.2);
+}
+.btn-primary{
+    background-color: #2f487f !important;
+    border: none;
+}
+/* -------------------- */
+.quien-pago-list-move {
+    transition: transform 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+html, body{
+    font-family: regulator-nova, sans-serif;
+    color: white;
+    background-color: #273c75;
+    padding-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.currency{
+    font-weight: 700;
 }
+
+.i-btn{
+    cursor: pointer;
+    color: #2f487f !important;
+}
+i-btn:hover{
+    color: #6181c7 !important;
+}
+
+.currency-positive{
+    color: #0088ff;
+}
+
+.currency-negative{
+    color: #ff7b3f;
+}
+
+.currency-total{
+    color: #47d400;
+}
+
+.title-bar{
+    background-color: #192a56 !important;
+}
+
+.list-titles{
+    color: #192a56;
+    font-weight: 700;
+}
+
+.type-toggle{
+    font-size: 0.8em !important;
+    background-color: #6181c7;
+    border-radius: 100px;
+}
+.type-input{
+    font-size: 0.8em !important;
+    height: 33px;
+    background-color: #6181c7;
+    border-radius: 100px;
+}
+
