--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,13 @@ input[type=number] {
     transition: border-radius 1s;
 }
 input{
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    padding: 0.5em;
     color: white;
     border: none;
     width: 100%;
+    height: 3em;
 }
 input::placeholder{
     color: rgba(255, 255, 255, 0.5);
@@ -56,6 +59,10 @@ option{
 .btn-primary{
     background-color: #2f487f !important;
     border: none;
+}
+.material-icons{
+    display: inherit;
+    vertical-align: middle;
 }
 /* -------------------- */
 .quien-pago-list-move {
@@ -112,5 +119,24 @@ i-btn:hover{
     height: 33px;
     background-color: #6181c7;
     border-radius: 100px;
+}
+.type-tag{
+    font-size: 0.8em !important;
+    height: 33px;
+    background-color: #6181c7;
+    border-radius: 100px;
+}
+
+/* MODALS! */
+.modal-content{
+    background-color: #192a56;
+}
+
+.close{
+    color: white;
+}
+
+.modal-header, .modal-footer{
+    border: none;
 }
 
